# ddd-value-objects

./: .gitignore  README.md  entity.py  float_value_object.py  int_value_object.py  main.py  pyproject.toml  string_value_object.py  uuid_value_object.py  value_object.py
.github/: CODEOWNERS
.github/workflows/: code.yml
src/ddd_value_objects/: __init__.py  bool_value_object.py  composite_value_object.py  country_code_value_object.py  currency_value_object.py  date_time_value_object.py  date_value_object.py  decimal_value_object.py  email_value_object.py  enum_value_object.py  float_value_object.py  int_value_object.py  invalid_argument_error.py  ip_address_value_object.py  money_value_object.py  phone_number_value_object.py  positive_decimal_value_object.py  positive_float_value_object.py  positive_int_value_object.py  string_value_object.py  url_value_object.py  uuid_value_object.py  value_object.py
tests/: test_composite_value_object.py  test_country_code_value_object.py  test_date_time_value_object.py  test_date_value_object.py  test_decimal_value_objects.py  test_enum_value_object.py  test_integrated_validations.py  test_ip_address_value_object.py  test_money_value_object.py  test_phone_number_value_object.py  test_positive_float_value_object.py  test_positive_int_value_object.py  test_positive_value_objects.py  test_primitives.py  test_string_length_validations.py  test_uuid_value_object.py  test_value_object.py
